--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</div>
 	</div>
 	<br />
-	<center><img id="main_img" src="./img/0.jpg"></center>
+	<center><img id="main_img" src="img/0.jpg"></center>
 <script type="text/javascript" src="jquerry.min.js"></script>
 <script type="text/javascript" src="wordbank.js"></script>
 <script type="text/javascript" src="jquery.qrcode.js"></script>
