--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<center><img id="main_img" src="img/0.jpg"></center>
 <script type="text/javascript" src="jquerry.min.js"></script>
 <script type="text/javascript" src="wordbank.js"></script>
-<!-- <script type="text/javascript" src="jquery.qrcode.js"></script> -->
+<script type="text/javascript" src="jquery.qrcode.js"></script>
 <script type="text/javascript" src="clickletter.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </body>
