--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <script type="text/javascript" src="jquerry.min.js"></script>
 <script type="text/javascript" src="wordbank.js"></script>
 <script type="text/javascript" src="jquery.qrcode.js"></script>
-<script type="text/javascript" src="clickletter.js"></script>
+<script type="text/javascript" src="clickLetter.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
